[gd_scene load_steps=5 format=3 uid="uid://cw8wsn46q8n64"]

[ext_resource type="Script" uid="uid://dpr3vb3jditmq" path="res://scripts/car.gd" id="1_g25lt"]
[ext_resource type="Texture2D" uid="uid://bqfo68sct1wwa" path="res://sprites/truck.png" id="2_qt2eu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eyc5j"]
size = Vector2(136, 295)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c35m8"]
size = Vector2(137, 299)

[node name="Car" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_g25lt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["player"]]
position = Vector2(1, 17.5)
shape = SubResource("RectangleShape2D_eyc5j")

[node name="Area2D" type="Area2D" parent="." groups=["player"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" groups=["player"]]
position = Vector2(1.5, 16.5)
shape = SubResource("RectangleShape2D_c35m8")

[node name="spin_timer" type="Timer" parent="."]
one_shot = true

[node name="fix_spin" type="Timer" parent="."]
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_qt2eu")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="spin_timer" to="." method="_on_spin_timer_timeout"]
[connection signal="timeout" from="fix_spin" to="." method="_on_fix_spin_timeout"]
